fixed spacing

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -896,3 +896,6 @@ label.opposing, label.player {
     height: 2em;
     align-content: center;
   }
+.trainer-poke-switch-explain {
+  margin-left: 1em;
+}
